# electricity-price-api

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py
app/data/: data_loader.py
app/routes/: prices.py
app/services/: price_service.py
tests/: conftest.py  test_data_loader.py  test_routes.py  test_services.py
